--- a/tile_map/CMakeLists.txt
+++ b/tile_map/CMakeLists.txt
@@ -22,31 +22,15 @@ set(QT_LIBRARIES
   ${Qt5OpenGL_LIBRARIES}
   ${Qt5Widgets_LIBRARIES}
 )
-include_directories(
-  ${Qt5Core_INCLUDE_DIRS}
-  ${Qt5Gui_INCLUDE_DIRS}
-  ${Qt5Network_INCLUDE_DIRS}
-  ${Qt5OpenGL_INCLUDE_DIRS}
-  ${Qt5Widgets_INCLUDE_DIRS}
-)
-add_definitions(
-  ${Qt5Core_DEFINITIONS}
-  ${Qt5Gui_DEFINITIONS}
-  ${Qt5Network_DEFINITIONS}
-  ${Qt5OpenGL_DEFINITIONS}
-  ${Qt5Widgets_DEFINITIONS}
-)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS}")
 
 find_package(PkgConfig REQUIRED)
-
-find_package(GLU REQUIRED)
 
 pkg_check_modules(JSONCPP REQUIRED jsoncpp)
 
 catkin_package(
   INCLUDE_DIRS include
-  DEPENDS Qt5Core Qt5Gui Qt5OpenGL Qt5Widgets
+  DEPENDS QT
   CATKIN_DEPENDS 
     roscpp 
     pluginlib 
@@ -59,10 +43,9 @@ catkin_package(
 # Fix conflict between Boost signals used by tf and QT signals used by mapviz
 add_definitions(-DQT_NO_KEYWORDS)
 
-include_directories(include ${catkin_INCLUDE_DIRS} ${JSONCPP_INCLUDE_DIRS})
-
-include_directories(${CMAKE_CURRENT_BINARY_DIR})
-include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+include_directories(include
+    ${catkin_INCLUDE_DIRS}
+    ${JSONCPP_INCLUDE_DIRS})
 
 file (GLOB TILE_SRC_FILES 
   src/image_cache.cpp
@@ -77,11 +60,18 @@ qt5_wrap_cpp(TILE_SRC_FILES
   include/tile_map/wmts_source.h
   include/tile_map/bing_source.h)
 add_library(${PROJECT_NAME} ${TILE_SRC_FILES})
-target_link_libraries(${PROJECT_NAME} ${QT_LIBRARIES} ${QT_QTOPENGL_LIBRARIES} ${GLU_LIBRARY} ${JSONCPP_LIBRARIES} ${catkin_LIBRARIES})
+target_link_libraries(${PROJECT_NAME}
+    ${catkin_LIBRARIES}
+    ${JSONCPP_LIBRARIES}
+    Qt5::Core
+    Qt5::Gui
+    Qt5::Network
+    Qt5::Widgets
+    Qt5::OpenGL)
 
-file (GLOB PLUGIN_SRC_FILES
+set(PLUGIN_SRC_FILES
   src/tile_map_plugin.cpp)
-file (GLOB PLUGIN_UI_FILES
+set(PLUGIN_UI_FILES
   src/tile_map_config.ui)
 qt5_wrap_ui(PLUGIN_SRC_FILES ${PLUGIN_UI_FILES})
 qt5_wrap_cpp(PLUGIN_SRC_FILES include/tile_map/tile_map_plugin.h)
